Made some changes to index.html

--- a/index.html
+++ b/index.html
@@ -28,20 +28,12 @@
         </ul>
       </header>
       <section>
-        <h1>DAWM</h1>
 
 <p>DAWM is a tiling window manager written in C, that is partially based on dwm.</p>
 
-<p>The long-term goals of DAWM are:</p>
+<h2>Installation</h2>
 
-<ul>
-<li>To have as few dependencies as possible (Should be compilable with only POSIX libraries and Xlib)</li>
-<li>EWMH (NetWM) compliance</li>
-<li>(Optional) Xinerama support</li>
-<li>(Optional) Xft support</li>
-</ul><h2>Installation</h2>
-
-<p>DAWM requires Xlib development headers.</p>
+<p>DAWM requires Xlib development headers and libconfig.</p>
 
 <p>The software can be installed with the following command:</p>
 
